--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>The Art of React.js Mastery 🚀</title>
 </head>
 <body>
-    <div class="root">
-        <h2>Hello, World!</h2>
-    </div>
+    <div id="root"></div>
+
+    <script>
+        const heading = document.createElement("h1");
+        heading.innerHTML = "Hello, World using JavaScript!";
+
+        const root = document.getElementById("root");
+        root.appendChild(heading);
+    </script>
 </body>
 </html>
